tests/snapshots/backends_swift_snapshot_test__snapshot_trait_bridge_inbound__packages__swift__Sources__Demo__BridgeRegistrationOverloads.swift.snap
---
source: tests/backends_swift_snapshot_test.rs
expression: "&file.content"
---
// Generated by alef. Do not edit by hand.
// swift-format-ignore-file
// This file contains convenience overloads matching the alef e2e generator's call shapes.

import Foundation
import RustBridge

// MARK: - Unregister name: label overloads

public func unregisterImageProcessor(name: String) throws {
    try RustBridge.unregisterImageProcessor(name)
}

// MARK: - Bridge → Box register overloads

public func registerImageProcessor(_ bridge: any SwiftImageProcessorBridge) throws {
    try registerImageProcessor(SwiftImageProcessorBox(bridge))
}
