tests/snapshots/backends_swift_snapshot_test__snapshot_trait_bridge_inbound__packages__swift__Sources__Demo__SwiftOcrBackendBridge.swift.snap
---
source: tests/backends_swift_snapshot_test.rs
expression: "&file.content"
---
// Generated by alef. Do not edit by hand.
// swift-format-ignore-file
// This file contains generated FFI glue for trait bridge registration.

import Foundation
import RustBridge

/// Protocol for outbound `OcrBackend` implementations.
/// Conform your Swift class or struct to this protocol to implement
/// a Rust trait from the host side.
public protocol SwiftOcrBackendBridge: AnyObject {
    func processImage(image_bytes: Data, config: OcrConfig) async throws -> ExtractionResult
    func supportsLanguage(lang: String) -> Bool
}

/// Internal adapter wrapping a `SwiftOcrBackendBridge` conformer.
/// Marshals Swift types and trait calls to/from the C boundary.
/// Excluded/internal types are serialised to/from JSON strings.
final class SwiftOcrBackendAdapter {
    private let bridge: any SwiftOcrBackendBridge

    init(bridge: any SwiftOcrBackendBridge) {
    self.bridge = bridge
    }

    func processImageCall(image_bytes: Data, config: OcrConfig) -> ExtractionResult {
        do {
        let result = try self.bridge.processImage(image_bytes, config)
            return marshal_ok_result(result)
    } catch {
        return marshal_error_result(error)
    }
    }

    func supportsLanguageCall(lang: String) -> Bool {
        let result = self.bridge.supportsLanguage(lang)
        return result
    }

}

// MARK: - Marshalling helpers

private func marshal_ok_result<T: Encodable>(_ value: T) -> String {
    let encoder = JSONEncoder()
    if let data = try? encoder.encode(value),
       let jsonString = String(data: data, encoding: .utf8) {
        return "{\"ok\": \(jsonString)}"
    }
    return "{\"ok\": null}"
}

private func marshal_error_result(_ error: any Error) -> String {
    let errorString = String(describing: error)
    let encoder = JSONEncoder()
    if let data = try? encoder.encode(errorString),
       let jsonString = String(data: data, encoding: .utf8) {
        return "{\"err\": \(jsonString)}"
    }
    return "{\"err\": \"unknown error\"}"
}

/// Register an outbound `OcrBackend` plugin.
/// Pass an instance conforming to `SwiftOcrBackendBridge`.
public func registerOcrBackend(_ bridge: any SwiftOcrBackendBridge) throws {
    let adapter = SwiftOcrBackendAdapter(bridge: bridge)
    // Call into Rust to register the adapter
    try RustBridge.registerOcrBackend(adapter)
}
